# questionsapp

./: .dockerignore  .env.example  .gitignore  Dockerfile  celery_worker.py  config.py  docker-compose.yml  pyproject.toml  requirements.txt  support_db  test.py  wsgi.py
app/: main.py
app/core/: config.py  constants.py  env.py  exceptions.py  legacy_runtime.py  logging.py  middleware.py  rate_limit.py  runtime_config.py  settings.py
app/db/: __init__.py  base.py  engine.py  legacy_db.py  models.py  session.py
app/integrations/: __init__.py  confluence_gateway.py  telegram_gateway.py
app/repositories/: __init__.py  admin_repository.py  auth_repository.py  legacy_session.py  questions_list_repository.py  questions_repository.py  web_repository.py
app/responses/: builders.py
config/: Dockerfile  requirements.txt  root
crontasks/: cron-test.py
docs/: async_data_layer_rfc.md  compatibility_changelog.md  deployment.md  fastapi_migration_architecture.md  flask_api_snapshot.md  legacy_code_inventory.md  migration_checklist.md  non_functional_baseline.md  openapi.json  plan.md  post_fastapi_cleanup_plan.md  settings_migration_plan.md  steps.md
questionsapp/: __init__.py  env.py  extensions.py  models.py  routes.py
supp_db/: supp_connection.py
tasks/: getfollowers.py  getsuppinfo.py  publicorder.py  publicorder_old.py  updatespaceinfo.py  updatespaceinfo_new.py  updatespaceinfo_new_1.py
tests/: conftest.py  test_legacy_payload_compat_endpoints.py  test_openapi_contract.py  test_questions_api_endpoint.py  test_questions_api_rate_limit.py  test_web_service.py
(+101 files in other folders)
