[project]
name = "questionsapp"
version = "0.1.0"
description = "Legacy Flask questions service"
requires-python = ">=3.10,<3.12"
dependencies = [
  "atlassian-python-api==3.41.3",
  "bcrypt==4.0.1",
  "beautifulsoup4==4.12.2",
  "celery==5.3.6",
  "cx-Oracle==8.3.0",
  "fastapi==0.115.12",
  "gunicorn==21.2.0",
  "Markdown==3.5.1",
  "numpy==1.26.2",
  "openpyxl==3.1.2",
  "pandas==2.1.3",
  "psycopg2-binary==2.9.9",
  "pydantic-settings==2.8.1",
  "python-multipart==0.0.20",
  "pytz==2023.3.post1",
  "redis==5.0.1",
  "requests==2.31.0",
  "SQLAlchemy==1.4.46",
  "urllib3==2.1.0",
  "uvicorn==0.34.0",
]

[tool.uv]
package = false
